Fixing up error with background colour not showing because I accidentally commented it out in the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,9 @@ main h2 {
     font-weight: 800;
 }
 
-/* section.solid-bg {
+section.solid-bg {
     background-color: rgba(220, 238, 248, 100);
-} */
+}
 
 section p {
     text-align: justify;
